<resources>
    <string name="app_name">UserRegistration</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="region">Region</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="logged_in_successfully">Logged In Successfully!</string>
    <string name="log_out">Log Out</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="register_sign_up">Register/Sign Up</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="password_needs_to_have_atleast_one_number">Password needs to have at least one number</string>
    <string name="password_needs_to_have_atleast_one_lower_case">Password needs to have at least one lower case letter</string>
    <string name="password_needs_to_have_atleast_one_upper_case">Password needs to have at least one upper case letter</string>
    <string name="password_needs_to_have_atleast_one_special_character">Password needs to have at least one of \'!@#$%&amp;()\'</string>
    <string name="password_needs_to_have_atleast_8_characters">Password needs to have at least 8 characters</string>
</resources>