<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.userregistration.ui.activity.MainViewModel" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_medium"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@id/logIn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:text="@={model.userName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_medium"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextAppearance.Material3.LabelMedium"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/userNameTil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={model.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regionTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@id/passwordTil">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/region"
                app:layout_constraintTop_toBottomOf="@id/passwordTil" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{model.isEnabled}"
            android:layout_margin="@dimen/space_medium"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/regionTil" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>